omrvm-iptables
# Generated by iptables-save v1.8.2 on Mon May 22 10:57:38 2023
*mangle
:PREROUTING ACCEPT [78286327:31734605578]
:INPUT ACCEPT [31319530:7241166785]
:FORWARD ACCEPT [46219988:24463524469]
:OUTPUT ACCEPT [28219269:22648037639]
:POSTROUTING ACCEPT [74438802:47111539408]
:tcfor - [0:0]
:tcin - [0:0]
:tcout - [0:0]
:tcpost - [0:0]
:tcpre - [0:0]
-A PREROUTING -j tcpre
-A INPUT -j tcin
-A FORWARD -j MARK --set-xmark 0x0/0xff
-A FORWARD -j tcfor
-A OUTPUT -j tcout
-A POSTROUTING -j tcpost
COMMIT
# Completed on Mon May 22 10:57:38 2023
# Generated by iptables-save v1.8.2 on Mon May 22 10:57:38 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:dsvpn+_fwd - [0:0]
:dsvpn+_in - [0:0]
:dsvpn+_out - [0:0]
:dynamic - [0:0]
:fw-net - [0:0]
:fw-vpn - [0:0]
:gre-user+_fwd - [0:0]
:gre-user+_in - [0:0]
:gre-user+_out - [0:0]
:gt-tun+_fwd - [0:0]
:gt-tun+_in - [0:0]
:gt-tun+_out - [0:0]
:gt-udp-tun+_fwd - [0:0]
:gt-udp-tun+_in - [0:0]
:gt-udp-tun+_out - [0:0]
:logdrop - [0:0]
:logflags - [0:0]
:logreject - [0:0]
:mlvpn+_fwd - [0:0]
:mlvpn+_in - [0:0]
:mlvpn+_out - [0:0]
:net-fw - [0:0]
:net-vpn - [0:0]
:net_frwd - [0:0]
:omr-bonding_fwd - [0:0]
:omr-bonding_in - [0:0]
:omr-bonding_out - [0:0]
:reject - [0:0]
:sha-lh-c6edacca9b1f1c30d31b - [0:0]
:sha-rh-198680cbb2950a372d5f - [0:0]
:shorewall - [0:0]
:smurflog - [0:0]
:smurfs - [0:0]
:tcpflags - [0:0]
:tun+_fwd - [0:0]
:tun+_in - [0:0]
:tun+_out - [0:0]
:vpn-fw - [0:0]
:vpn-net - [0:0]
:vpn-vpn - [0:0]
:vpn_frwd - [0:0]
:wg+_fwd - [0:0]
:wg+_in - [0:0]
:wg+_out - [0:0]
-A INPUT -i enp1s0 -j net-fw
-A INPUT -i omr-bonding -j omr-bonding_in
-A INPUT -i gre-user+ -j gre-user+_in
-A INPUT -i mlvpn+ -j mlvpn+_in
-A INPUT -i dsvpn+ -j dsvpn+_in
-A INPUT -i wg+ -j wg+_in
-A INPUT -i tun+ -j tun+_in
-A INPUT -i gt-tun+ -j gt-tun+_in
-A INPUT -i gt-udp-tun+ -j gt-udp-tun+_in
-A INPUT -i lo -j ACCEPT
-A INPUT -m addrtype --dst-type BROADCAST -j DROP
-A INPUT -m addrtype --dst-type ANYCAST -j DROP
-A INPUT -m addrtype --dst-type MULTICAST -j DROP
-A INPUT -g reject
-A FORWARD -i enp1s0 -j net_frwd
-A FORWARD -i omr-bonding -j omr-bonding_fwd
-A FORWARD -i gre-user+ -j gre-user+_fwd
-A FORWARD -i mlvpn+ -j mlvpn+_fwd
-A FORWARD -i dsvpn+ -j dsvpn+_fwd
-A FORWARD -i wg+ -j wg+_fwd
-A FORWARD -i tun+ -j tun+_fwd
-A FORWARD -i gt-tun+ -j gt-tun+_fwd
-A FORWARD -i gt-udp-tun+ -j gt-udp-tun+_fwd
-A FORWARD -m addrtype --dst-type BROADCAST -j DROP
-A FORWARD -m addrtype --dst-type ANYCAST -j DROP
-A FORWARD -m addrtype --dst-type MULTICAST -j DROP
-A FORWARD -g reject
-A OUTPUT -o enp1s0 -j fw-net
-A OUTPUT -o omr-bonding -j omr-bonding_out
-A OUTPUT -o gre-user+ -j gre-user+_out
-A OUTPUT -o mlvpn+ -j mlvpn+_out
-A OUTPUT -o dsvpn+ -j dsvpn+_out
-A OUTPUT -o wg+ -j wg+_out
-A OUTPUT -o tun+ -j tun+_out
-A OUTPUT -o gt-tun+ -j gt-tun+_out
-A OUTPUT -o gt-udp-tun+ -j gt-udp-tun+_out
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m addrtype --dst-type BROADCAST -j DROP
-A OUTPUT -m addrtype --dst-type ANYCAST -j DROP
-A OUTPUT -m addrtype --dst-type MULTICAST -j DROP
-A OUTPUT -g reject
-A dsvpn+_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A dsvpn+_fwd -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A dsvpn+_fwd -p tcp -j tcpflags
-A dsvpn+_fwd -j vpn_frwd
-A dsvpn+_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j dynamic
-A dsvpn+_in -m conntrack --ctstate INVALID,NEW,UNTRACKED -j smurfs
-A dsvpn+_in -p tcp -j tcpflags
-A dsvpn+_in -j vpn-fw
-A dsvpn+_out -j fw-vpn
COMMIT
# Completed on Mon May 22 10:57:38 2023
# Generated by iptables-save v1.8.2 on Mon May 22 10:57:38 2023
*raw
:PREROUTING ACCEPT [78286349:31734611518]
:OUTPUT ACCEPT [28219276:22648038407]
-A PREROUTING -p udp -m udp --dport 10080 -j CT --helper amanda
-A PREROUTING -p tcp -m tcp --dport 21 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper ftp
-A PREROUTING -p udp -m udp --dport 1719 -j CT --helper RAS
-A PREROUTING -p tcp -m tcp --dport 1720 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper Q.931
-A PREROUTING -p tcp -m tcp --dport 6667 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper irc
-A PREROUTING -p udp -m udp --dport 137 -j CT --helper netbios-ns
-A PREROUTING -p tcp -m tcp --dport 1723 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper pptp
-A PREROUTING -p tcp -m tcp --dport 6566 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper sane
-A PREROUTING -p udp -m udp --dport 5060 -j CT --helper sip
-A PREROUTING -p udp -m udp --dport 161 -j CT --helper snmp
-A PREROUTING -p udp -m udp --dport 69 -j CT --helper tftp
-A OUTPUT -p udp -m udp --dport 10080 -j CT --helper amanda
-A OUTPUT -p tcp -m tcp --dport 21 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper ftp
-A OUTPUT -p udp -m udp --dport 1719 -j CT --helper RAS
-A OUTPUT -p tcp -m tcp --dport 1720 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper Q.931
-A OUTPUT -p tcp -m tcp --dport 6667 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper irc
-A OUTPUT -p udp -m udp --dport 137 -j CT --helper netbios-ns
-A OUTPUT -p tcp -m tcp --dport 1723 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper pptp
-A OUTPUT -p tcp -m tcp --dport 6566 --tcp-flags FIN,SYN,RST,ACK SYN -j CT --helper sane
-A OUTPUT -p udp -m udp --dport 5060 -j CT --helper sip
-A OUTPUT -p udp -m udp --dport 161 -j CT --helper snmp
-A OUTPUT -p udp -m udp --dport 69 -j CT --helper tftp
COMMIT
# Completed on Mon May 22 10:57:38 2023
